syntax = "proto3";

message ArrayRecursive {
  message ICategory {
    repeat ArrayRecursive.ICategory children = 1;
    required double id = 2;
    required string code = 3;
    required double sequence = 4;
    required ArrayRecursive.ITimestamp created_at = 5;
  }

  message ITimestamp {
    required double time = 1;
    required double zone = 2;
  }
}